bases/guestbook/components/istio/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
    app.kubernetes.io/name: guestbook
    app.kubernetes.io/component: frontend
spec:
  gateways:
  - istio-gateways/istio-gateway
  hosts:
  - guestbook.
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
